Fix private tag being wrapped

--- a/shared/components/pages/ActivationPage.less
+++ b/shared/components/pages/ActivationPage.less
@@ -45,6 +45,7 @@
 }
 
 .ActivationPage__private-tag {
+    display: inline-block;
     padding: 5px;
     background-color: @amber-app;
     border-radius: 5px;
